--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.1.16</version>
+            <version>1.1.17-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
