--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
-            <version>1.1.14</version>
+            <version>1.1.15-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
