--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     <dependencies>
   
         <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
             <version>2.2.3-SNAPSHOT</version>
