--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,7 @@
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.jcr.resource</artifactId>
-                    <version>2.9.2</version>
+                    <version>3.0.1-SNAPSHOT</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
