--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,13 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>2.2.5-SNAPSHOT</version>
+            <version>2.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -280,7 +280,7 @@
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.jcr.resource</artifactId>
-                    <version>3.0.1-SNAPSHOT</version>
+                    <version>3.0.0</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
