--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>2.3.1-SNAPSHOT</version>
+            <version>2.3.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
