--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.contentparser</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.2.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
