--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.servlet-helpers</artifactId>
-            <version>1.1.3-SNAPSHOT</version>
+            <version>1.1.4</version>
             <scope>compile</scope>
         </dependency>
 
