--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>2.3.4</version>
+            <version>2.3.7-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
