--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>2.3.8</version>
+            <version>2.3.9-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.3.2</version>
+            <version>1.3.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
