--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
-            <version>2.3.11-SNAPSHOT</version>
+            <version>2.3.10</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.jcr-mock</artifactId>
-            <version>1.3.5-SNAPSHOT</version>
+            <version>1.3.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.servlet-helpers</artifactId>
-            <version>1.1.9-SNAPSHOT</version>
+            <version>1.1.8</version>
             <scope>compile</scope>
         </dependency>
 
