--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,67 +22,70 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.sling</groupId>
-        <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <artifactId>sling</artifactId>
+        <version>34-SNAPSHOT</version>
+        <relativePath />
     </parent>
 
-    <artifactId>org.apache.sling.testing.sling-mock.junit4</artifactId>
-    <packaging>bundle</packaging>
+    <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
+    <version>2.3.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <name>Apache Sling Testing Sling Mock JUnit 4</name>
+    <name>Apache Sling Testing Sling Mock Parent</name>
+    <description>Mock implementation of selected Sling APIs.</description>
+    
+    <properties>
+
+        <osgi-mock.version>2.4.0-SNAPSHOT</osgi-mock.version>
+        <jcr-mock.version>1.3.5-SNAPSHOT</jcr-mock.version>
+        <resourceresolver-mock.version>1.1.21-SNAPSHOT</resourceresolver-mock.version>
+        <logging-mock.version>2.0.0</logging-mock.version>
+        <servlet-helpers.version>1.1.8</servlet-helpers.version>
+
+    </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.testing.sling-mock.core</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.testing.sling-mock.core</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
-            <classifier>tests</classifier>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.testing.osgi-mock.junit4</artifactId>
-            <version>${osgi-mock.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.annotation.versioning</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Nullability annotations -->
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+    
+    <dependencyManagement>
+      <dependencies>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
+            <version>2.21.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.logging-mock</artifactId>
-            <scope>test</scope>
+            <version>${logging-mock.version}</version>
         </dependency>
 
-    </dependencies>
-
-    <build>
-        <plugins>
-    
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-            </plugin>
-    
-        </plugins>
-    </build>
+      </dependencies>
+    </dependencyManagement>
 
 </project>
