add linkedfile and mixin support

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -247,6 +247,12 @@
             <artifactId>org.apache.sling.testing.logging-mock</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
