SLING-8428 switch to geronmio specs

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -248,9 +248,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-annotation_1.3_spec</artifactId>
+             <version>1.0</version>
             <scope>test</scope>
         </dependency>
 
