--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -22,8 +22,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.sling</groupId>
-        <artifactId>sling</artifactId>
-        <version>34</version>
+        <artifactId>sling-bundle-parent</artifactId>
+        <version>35</version>
         <relativePath />
     </parent>
 
@@ -40,7 +40,7 @@
         <jcr-mock.version>1.4.4</jcr-mock.version>
         <resourceresolver-mock.version>1.1.24</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
-        <servlet-helpers.version>1.2.1-SNAPSHOT</servlet-helpers.version>
+        <servlet-helpers.version>1.3.0-SNAPSHOT</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
     </properties>
