switch back to previous version of maven release plugin to avoid problems with 3.0.0-M1

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -91,6 +91,8 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
+                    <!-- switch back to previous version of maven release plugin to avoid problems with 3.0.0-M1 -->
+                    <version>2.5.3</version>
                     <configuration>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
