SLING-10950 do not switch on latest-dependency-versions profile by default

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -284,7 +284,7 @@
         <profile>
             <id>latest-dependency-versions</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <dependencyManagement>
                 <dependencies>
