--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -277,6 +277,12 @@
             <version>4.7.0</version>
         </dependency>
 
+      <dependency>
+          <groupId>org.owasp.encoder</groupId>
+          <artifactId>encoder</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
       </dependencies>
     </dependencyManagement>
 
