SLING-12161: sling-org-apache-sling-testing-sling-mock: update to latest Oak releases

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -177,6 +177,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <scope>compile</scope>
